[locationinfo] Update tanslations

--- a/modules-available/locationinfo/lang/de/template-tags.json
+++ b/modules-available/locationinfo/lang/de/template-tags.json
@@ -1,97 +1,80 @@
 {
-    "lang_mainHeader": "Infoscreen",
-    "lang_locationName": "Name",
-    "lang_locationID": "ID",
-    "lang_locationIsHidden": "Versteckt",
-    "lang_locationIsHidden_title": "Wenn aktiv, dann liefert die API keine Informationen über diesen Raum.",
-    "lang_locationInUse": "Rechner",
-    "lang_locationSettings": "Einstellungen",
-    "lang_locationConfig": "Config",
-    "lang_pcID": "ID",
-    "lang_pcIP": "IP",
-    "lang_pcX": "X",
-    "lang_pcY": "Y",
-    "lang_pcState": "PC Status",
+    "lang_addServer": "Server",
+    "lang_addServer_helptext": "Server hinzuf\u00fcgen",
+    "lang_autoScale": "Auto Tage",
+    "lang_autoscaleTooltip": "Berechnet sich die optimale anzahl an Tagen, anhand der Bildschirmbreite, die der Kalender anzeigt.",
+    "lang_buildingTable": "Geb\u00e4ude \/ Raum Liste",
+    "lang_calendar": "Kalender",
+    "lang_calupdateTooltip": "Zeit nachdem der Kalender geupdated wird (in minuten)",
+    "lang_closingTime": "Schlie\u00dfungszeit",
+    "lang_config": "Einstellungen",
+    "lang_configupdateTooltip": "Zeit nachder die Einstellungen geupdated werden (in minuten)",
+    "lang_credentials": "Anmeldung",
+    "lang_customUrl": "Benutzerdefinierter URL",
+    "lang_customUrlTooltip": "Dieser URL \u00fcberscheibt die Einstellungen von dem Raum.",
     "lang_day": "Tag",
-    "lang_openingTime": "Öffnungszeiten",
-    "lang_closingTime": "Schließungszeit",
-    "lang_shortMonday": "Mo",
-    "lang_shortTuesday": "Di",
-    "lang_shortWednesday": "Mi",
-    "lang_shortThursday": "Do",
-    "lang_shortFriday": "Fr",
-    "lang_shortSaturday": "Sa",
-    "lang_shortSunday": "So",
-    "lang_shortMonTilFr": "Mo - Fr",
-    "lang_monTilFr": "Montag - Freitag",
-    "lang_saturday": "Samstag",
-    "lang_sunday": "Sonntag",
+    "lang_daysToShow": "Tage",
+    "lang_daysToShowTooltip": "Legt die gew\u00fcnschte Anzahl an Tagen im Kalender fest.",
+    "lang_deleteConfirmation": "Bist du sicher?",
+    "lang_display": "Anzeige",
+    "lang_ecoMode": "E-Ink modus",
+    "lang_ecoTooltip": "Anstelle der Farb-basierten PC-Status Bilder, werden Symbol-basierte PC Bilder verwendet.",
     "lang_expertMode": "Experten Modus",
-    "lang_expertMode_title": "Ermöglicht es dir Öffnungzeiten für jeden Tag zu Setzen.",
-    "lang_nameTooltip": "Legt den Namen des Servers fest.",
-    "lang_urlTooltip": "Server URL über den das backend versucht Kalender-daten zu holen.",
-    "lang_typeTooltip": "Legt fest um welchen Typ von Server es sich handelt.",
+    "lang_expertMode_helptext": "Erm\u00f6glicht es dir \u00d6ffnungzeiten f\u00fcr jeden Tag zu Setzen.",
+    "lang_general": "Allgemein",
     "lang_language": "Sprache",
-    "lang_languageEn": "Englisch",
-    "lang_languageDe": "Deutsch",
-    "lang_languagePt": "Portugiesisch",
     "lang_languageTooltip": "Die Sprache, welche vom Frontend benutzt wird.",
+    "lang_locationID": "ID",
+    "lang_locationInUse": "Rechner",
+    "lang_locationIsHidden": "Versteckt",
+    "lang_locationIsHidden_helptext": "Wenn aktiv, dann liefert die API keine Informationen \u00fcber diesen Raum.",
+    "lang_locationName": "Name",
+    "lang_locationSettings": "Einstellungen",
+    "lang_mainHeader": "Infoscreen",
     "lang_mode": "Modus",
     "lang_mode1": "Kalender & Raum",
     "lang_mode2": "Kalender",
     "lang_mode3": "Raum",
     "lang_mode4": "Wechselnd",
-    "lang_modeTooltip": "Die Anzeigemodi, welche das frontend unterstützt.",
-    "lang_ecoMode": "E-Ink modus",
-    "lang_ecoTooltip": "Anstelle der Farb-basierten PC-Status Bilder, werden Symbol-basierte PC Bilder verwendet.",
-    "lang_daysToShow": "Tage",
-    "lang_daysToShowTooltip": "Legt die gewünschte Anzahl an Tagen im Kalender fest.",
-    "lang_scale": "Kalender breite",
-    "lang_scaleTooltip": "[10-90] Legt die Kalenderbreite fest. (In Prozent)",
-    "lang_switchTime": "Wechsel Zeit",
-    "lang_switchTimeTooltip": "[1-120] Legt die Zeit fest, die vergeht bis ein wechsel erfolgt (in sekunden)",
-    "lang_rotation": "Rotation",
-    "lang_rotation0": "0°",
-    "lang_rotation1": "90° ⟲",
-    "lang_rotation2": "180°",
-    "lang_rotation3": "90° ⟳",
-    "lang_rotationTooltip": "Rotiert den Raum.",
-    "lang_vertical": "Vertikaler Modus",
-    "lang_verticalTooltip": "Legt fest, ob der Kalender und der Raum übereinander angezeigt werden soll.",
-    "lang_updateRates": "Anfragraten",
-    "lang_calendar": "Kalender",
-    "lang_calupdateTooltip": "Zeit nachdem der Kalender geupdated wird (in minuten)",
-    "lang_room": "Raum",
-    "lang_roomupdateTooltip": "Zeit nachder die Pcs geupdated werden (in sekunden)",
-    "lang_config": "Einstellungen",
-    "lang_configupdateTooltip": "Zeit nachder die Einstellungen geupdated werden (in minuten)",
-    "lang_min": "min",
-    "lang_sec": "sec",
-    "lang_autoScale": "Auto Tage",
-    "lang_autoscaleTooltip": "Berechnet sich die optimale anzahl an Tagen, anhand der Bildschirmbreite, die der Kalender anzeigt.",
-    "lang_deleteConfirmation": "Bist du sicher?",
-    "lang_addServer": "Server",
-    "lang_addServer_title": "Server hinzufügen",
+    "lang_modeTooltip": "Die Anzeigemodi, welche das frontend unterst\u00fctzt.",
+    "lang_monTilFr": "Montag - Freitag",
+    "lang_nameTooltip": "Legt den Namen des Servers fest.",
     "lang_noServer": "<Kein Server>",
-    "lang_serverTable": "Server Liste",
-    "lang_buildingTable": "Gebäude / Raum Liste",
-    "lang_serverUrl": "URL",
-    "lang_customUrl": "Benutzerdefinierter URL",
-    "lang_customUrlTooltip": "Dieser URL überscheibt die Einstellungen von dem Raum.",
-    "lang_serverType": "Typ",
-    "lang_serverUser": "Benutzer",
-    "lang_serverPassword": "Passwort",
-    "lang_serverID": "Server ID",
-    "lang_sID": "sID",
-    "lang_server": "Server",
-    "lang_serverTooltip": "Legt fest, von welchem Server die Kalender Daten bezogen werden.",
+    "lang_openingTime": "\u00d6ffnungszeiten",
+    "lang_refresh": "Aktualisieren",
+    "lang_refresh_helptext": "\u00dcberpr\u00fcft ob die Serververbindung g\u00fcltig ist.",
+    "lang_room": "Raum",
     "lang_roomId": "Raum ID",
     "lang_roomIdTooltip": "Die ID vom Raum, welche der Server braucht, um die Kalender Daten abzurufen.",
-    "lang_credentials": "Anmeldung",
-    "lang_refresh_title": "Überprüft ob die Serververbindung gültig ist.",
-    "lang_delete": "Löschen",
-    "lang_refresh": "Aktualisieren",
-    "lang_general": "Allgemein",
+    "lang_roomupdateTooltip": "Zeit nachder die Pcs geupdated werden (in sekunden)",
+    "lang_rotation": "Rotation",
+    "lang_rotation0": "0\u00b0",
+    "lang_rotation1": "90\u00b0 \u27f2",
+    "lang_rotation2": "180\u00b0",
+    "lang_rotation3": "90\u00b0 \u27f3",
+    "lang_rotationTooltip": "Rotiert den Raum.",
+    "lang_saturday": "Samstag",
+    "lang_scale": "Kalender breite",
+    "lang_scaleTooltip": "[10-90] Legt die Kalenderbreite fest. (In Prozent)",
+    "lang_sec": "sec",
     "lang_server": "Server",
-    "lang_display": "Anzeige"
+    "lang_serverTable": "Server Liste",
+    "lang_serverTooltip": "Legt fest, von welchem Server die Kalender Daten bezogen werden.",
+    "lang_serverType": "Typ",
+    "lang_serverUrl": "URL",
+    "lang_shortFriday": "Fr",
+    "lang_shortMonday": "Mo",
+    "lang_shortSaturday": "Sa",
+    "lang_shortSunday": "So",
+    "lang_shortThursday": "Do",
+    "lang_shortTuesday": "Di",
+    "lang_shortWednesday": "Mi",
+    "lang_sunday": "Sonntag",
+    "lang_switchTime": "Wechsel Zeit",
+    "lang_switchTimeTooltip": "[1-120] Legt die Zeit fest, die vergeht bis ein wechsel erfolgt (in sekunden)",
+    "lang_typeTooltip": "Legt fest um welchen Typ von Server es sich handelt.",
+    "lang_updateRates": "Anfragraten",
+    "lang_urlTooltip": "Server URL \u00fcber den das backend versucht Kalender-daten zu holen.",
+    "lang_vertical": "Vertikaler Modus",
+    "lang_verticalTooltip": "Legt fest, ob der Kalender und der Raum \u00fcbereinander angezeigt werden soll."
 }
