--- a/modules-available/locationinfo/lang/en/template-tags.json
+++ b/modules-available/locationinfo/lang/en/template-tags.json
@@ -1,103 +1,80 @@
 {
-    "lang_mainHeader": "Infoscreen",
-
-    "lang_locationName": "Name",
-    "lang_locationID": "ID",
-    "lang_locationIsHidden": "Hidden",
-    "lang_locationIsHidden_title": "If checked the API doesn't return information about the room.",
-    "lang_locationInUse": "Clients",
-    "lang_locationSettings": "Settings",
-    "lang_locationConfig": "Config",
-
-    "lang_pcID": "ID",
-    "lang_pcIP": "IP",
-    "lang_pcX": "X",
-    "lang_pcY": "Y",
-    "lang_pcState": "PC state",
-
-    "lang_day": "Day",
-    "lang_openingTime": "Opening times",
+    "lang_addServer": "Server",
+    "lang_addServer_helptext": "Add server",
+    "lang_autoScale": "Auto Days",
+    "lang_autoscaleTooltip": "Calculates the optimum amount of days to show from the display width.",
+    "lang_buildingTable": "Building \/ Room List",
+    "lang_calendar": "Calendar",
+    "lang_calupdateTooltip": "Time the calender querys for updates (in minutes)",
     "lang_closingTime": "Closing time",
-
-    "lang_shortMonday": "Mon",
-    "lang_shortTuesday": "Tue",
-    "lang_shortWednesday": "Wed",
-    "lang_shortThursday": "Thu",
-    "lang_shortFriday": "Fri",
-    "lang_shortSaturday": "Sat",
-    "lang_shortSunday": "Sun",
-    "lang_shortMonTilFr": "Mon - Fri",
-    "lang_monTilFr": "Monday - Friday",
-    "lang_saturday": "Saturday",
-    "lang_sunday": "Sunday",
+    "lang_config": "Config",
+    "lang_configupdateTooltip": "Time interval the config gets updated (in minutes)",
+    "lang_credentials": "Login",
+    "lang_customUrl": "Custom URL",
+    "lang_customUrlTooltip": "This URL will override the config settings from the room.",
+    "lang_day": "Day",
+    "lang_daysToShow": "Days",
+    "lang_daysToShowTooltip": "Defines the amount of days to show in the calendar",
+    "lang_deleteConfirmation": "Are you sure?",
+    "lang_display": "Display",
+    "lang_ecoMode": "E-Ink mode",
+    "lang_ecoTooltip": "Symbolic based pc state pictures are used instead of the colour base ones.",
     "lang_expertMode": "Expert mode",
-    "lang_expertMode_title": "Allows you to set openingtimes for every day.",
-
-    "lang_nameTooltip": "Defines the name of the server.",
-    "lang_urlTooltip": "Server URL on which the backend trys to get the calendar data from.",
-    "lang_typeTooltip": "Defines on which type of server you want to connect to.",
+    "lang_expertMode_helptext": "Allows you to set openingtimes for every day.",
+    "lang_general": "General",
     "lang_language": "Language",
-    "lang_languageEn": "English",
-    "lang_languageDe": "German",
-    "lang_languagePt": "Portugues",
     "lang_languageTooltip": "The language the frontend uses.",
+    "lang_locationID": "ID",
+    "lang_locationInUse": "Clients",
+    "lang_locationIsHidden": "Hidden",
+    "lang_locationIsHidden_helptext": "If checked the API doesn't return information about the room.",
+    "lang_locationName": "Name",
+    "lang_locationSettings": "Settings",
+    "lang_mainHeader": "Infoscreen",
     "lang_mode": "Mode",
     "lang_mode1": "Calendar & Room",
     "lang_mode2": "Calendar",
     "lang_mode3": "Room",
     "lang_mode4": "Switching",
     "lang_modeTooltip": "The display modes the frontend supports.",
-    "lang_ecoMode": "E-Ink mode",
-    "lang_ecoTooltip": "Symbolic based pc state pictures are used instead of the colour base ones.",
-    "lang_daysToShow": "Days",
-    "lang_daysToShowTooltip": "Defines the amount of days to show in the calendar",
-    "lang_scale": "Calendar width",
-    "lang_scaleTooltip": "[10-90] Defines the calendar width. (in percent)",
-    "lang_switchTime": "Switchtime",
-    "lang_switchTimeTooltip": "[1-120] Sets the time between switching (in seconds)",
-    "lang_rotation": "Rotation",
-    "lang_rotation0": "0°",
-    "lang_rotation1": "90° ⟲",
-    "lang_rotation2": "180°",
-    "lang_rotation3": "90° ⟳",
-    "lang_rotationTooltip": "Rotates the room.",
-    "lang_vertical": "Vertical mode",
-    "lang_verticalTooltip": "Defines whether the room and calendar are shown above each other.",
-    "lang_updateRates": "Update rates",
-    "lang_calendar": "Calendar",
-    "lang_calupdateTooltip": "Time the calender querys for updates (in minutes)",
-    "lang_room": "Room",
-    "lang_roomupdateTooltip": "Time the PCs in the room gets updated (in seconds)",
-    "lang_config": "Config",
-    "lang_configupdateTooltip": "Time interval the config gets updated (in minutes)",
-    "lang_min": "min",
-    "lang_sec": "sec",
-    "lang_autoScale": "Auto Days",
-    "lang_autoscaleTooltip": "Calculates the optimum amount of days to show from the display width.",
-    "lang_deleteConfirmation": "Are you sure?",
-    "lang_addServer": "Server",
-    "lang_addServer_title": "Add server",
+    "lang_monTilFr": "Monday - Friday",
+    "lang_nameTooltip": "Defines the name of the server.",
     "lang_noServer": "<no server>",
-    "lang_serverTable": "Server List",
-    "lang_buildingTable": "Building / Room List",
-    "lang_serverUrl": "URL",
-    "lang_customUrl": "Custom URL",
-    "lang_customUrlTooltip": "This URL will override the config settings from the room.",
-    "lang_serverType": "Type",
-    "lang_serverUser": "User",
-    "lang_serverPassword": "Password",
-    "lang_serverID": "Server ID",
-    "lang_sID": "sID",
-    "lang_server": "Server",
-    "lang_serverTooltip": "Defines from which server the room queries the calendar data.",
+    "lang_openingTime": "Opening times",
+    "lang_refresh": "Refresh",
+    "lang_refresh_helptext": "Checks if the server connection is valid.",
+    "lang_room": "Room",
     "lang_roomId": "Room ID",
     "lang_roomIdTooltip": "The ID of the room the server needs, for querying the calendar data.",
-    "lang_credentials": "Login",
-    "lang_refresh_title": "Checks if the server connection is valid.",
-    "lang_delete": "Delete",
-    "lang_refresh": "Refresh",
-    "lang_general": "General",
-
+    "lang_roomupdateTooltip": "Time the PCs in the room gets updated (in seconds)",
+    "lang_rotation": "Rotation",
+    "lang_rotation0": "0\u00b0",
+    "lang_rotation1": "90\u00b0 \u27f2",
+    "lang_rotation2": "180\u00b0",
+    "lang_rotation3": "90\u00b0 \u27f3",
+    "lang_rotationTooltip": "Rotates the room.",
+    "lang_saturday": "Saturday",
+    "lang_scale": "Calendar width",
+    "lang_scaleTooltip": "[10-90] Defines the calendar width. (in percent)",
+    "lang_sec": "sec",
     "lang_server": "Server",
-    "lang_display": "Display"
+    "lang_serverTable": "Server List",
+    "lang_serverTooltip": "Defines from which server the room queries the calendar data.",
+    "lang_serverType": "Type",
+    "lang_serverUrl": "URL",
+    "lang_shortFriday": "Fri",
+    "lang_shortMonday": "Mon",
+    "lang_shortSaturday": "Sat",
+    "lang_shortSunday": "Sun",
+    "lang_shortThursday": "Thu",
+    "lang_shortTuesday": "Tue",
+    "lang_shortWednesday": "Wed",
+    "lang_sunday": "Sunday",
+    "lang_switchTime": "Switchtime",
+    "lang_switchTimeTooltip": "[1-120] Sets the time between switching (in seconds)",
+    "lang_typeTooltip": "Defines on which type of server you want to connect to.",
+    "lang_updateRates": "Update rates",
+    "lang_urlTooltip": "Server URL on which the backend trys to get the calendar data from.",
+    "lang_vertical": "Vertical mode",
+    "lang_verticalTooltip": "Defines whether the room and calendar are shown above each other."
 }
