[locationinfo] Clean up translations

--- a/modules-available/locationinfo/lang/de/template-tags.json
+++ b/modules-available/locationinfo/lang/de/template-tags.json
@@ -1,11 +1,11 @@
 {
     "lang_addServer": "Server",
-    "lang_addServer_helptext": "Server hinzuf\u00fcgen",
     "lang_autoScale": "Auto Tage",
     "lang_autoscaleTooltip": "Berechnet sich die optimale anzahl an Tagen, anhand der Bildschirmbreite, die der Kalender anzeigt.",
     "lang_buildingTable": "Geb\u00e4ude \/ Raum Liste",
     "lang_calendar": "Kalender",
     "lang_calupdateTooltip": "Zeit nachdem der Kalender geupdated wird (in minuten)",
+    "lang_checkConnection": "Verbindung pr\u00fcfen",
     "lang_closingTime": "Schlie\u00dfungszeit",
     "lang_config": "Einstellungen",
     "lang_configupdateTooltip": "Zeit nachder die Einstellungen geupdated werden (in minuten)",
@@ -19,15 +19,13 @@
     "lang_display": "Anzeige",
     "lang_ecoMode": "E-Ink modus",
     "lang_ecoTooltip": "Anstelle der Farb-basierten PC-Status Bilder, werden Symbol-basierte PC Bilder verwendet.",
+    "lang_entryName": "Name",
     "lang_expertMode": "Experten Modus",
-    "lang_expertMode_helptext": "Erm\u00f6glicht es dir \u00d6ffnungzeiten f\u00fcr jeden Tag zu Setzen.",
     "lang_general": "Allgemein",
     "lang_language": "Sprache",
     "lang_languageTooltip": "Die Sprache, welche vom Frontend benutzt wird.",
-    "lang_locationID": "ID",
-    "lang_locationInUse": "Rechner",
     "lang_locationIsHidden": "Versteckt",
-    "lang_locationIsHidden_helptext": "Wenn aktiv, dann liefert die API keine Informationen \u00fcber diesen Raum.",
+    "lang_locationIsHidden_title": "Wenn aktiv, dann liefert die API keine Informationen \u00fcber diesen Raum.",
     "lang_locationName": "Name",
     "lang_locationSettings": "Einstellungen",
     "lang_mainHeader": "Infoscreen",
@@ -41,8 +39,6 @@
     "lang_nameTooltip": "Legt den Namen des Servers fest.",
     "lang_noServer": "<Kein Server>",
     "lang_openingTime": "\u00d6ffnungszeiten",
-    "lang_refresh": "Aktualisieren",
-    "lang_refresh_helptext": "\u00dcberpr\u00fcft ob die Serververbindung g\u00fcltig ist.",
     "lang_room": "Raum",
     "lang_roomId": "Raum ID",
     "lang_roomIdTooltip": "Die ID vom Raum, welche der Server braucht, um die Kalender Daten abzurufen.",
@@ -61,7 +57,6 @@
     "lang_serverTable": "Server Liste",
     "lang_serverTooltip": "Legt fest, von welchem Server die Kalender Daten bezogen werden.",
     "lang_serverType": "Typ",
-    "lang_serverUrl": "URL",
     "lang_shortFriday": "Fr",
     "lang_shortMonday": "Mo",
     "lang_shortSaturday": "Sa",
@@ -70,11 +65,10 @@
     "lang_shortTuesday": "Di",
     "lang_shortWednesday": "Mi",
     "lang_sunday": "Sonntag",
-    "lang_switchTime": "Wechsel Zeit",
+    "lang_switchTime": "Wechselintervall",
     "lang_switchTimeTooltip": "[1-120] Legt die Zeit fest, die vergeht bis ein wechsel erfolgt (in sekunden)",
     "lang_typeTooltip": "Legt fest um welchen Typ von Server es sich handelt.",
     "lang_updateRates": "Anfragraten",
-    "lang_urlTooltip": "Server URL \u00fcber den das backend versucht Kalender-daten zu holen.",
     "lang_vertical": "Vertikaler Modus",
     "lang_verticalTooltip": "Legt fest, ob der Kalender und der Raum \u00fcbereinander angezeigt werden soll."
 }
