--- a/modules-available/locationinfo/lang/en/template-tags.json
+++ b/modules-available/locationinfo/lang/en/template-tags.json
@@ -1,11 +1,11 @@
 {
     "lang_addServer": "Server",
-    "lang_addServer_helptext": "Add server",
     "lang_autoScale": "Auto Days",
     "lang_autoscaleTooltip": "Calculates the optimum amount of days to show from the display width.",
     "lang_buildingTable": "Building \/ Room List",
     "lang_calendar": "Calendar",
     "lang_calupdateTooltip": "Time the calender querys for updates (in minutes)",
+    "lang_checkConnection": "Check connection",
     "lang_closingTime": "Closing time",
     "lang_config": "Config",
     "lang_configupdateTooltip": "Time interval the config gets updated (in minutes)",
@@ -19,15 +19,13 @@
     "lang_display": "Display",
     "lang_ecoMode": "E-Ink mode",
     "lang_ecoTooltip": "Symbolic based pc state pictures are used instead of the colour base ones.",
+    "lang_entryName": "Name",
     "lang_expertMode": "Expert mode",
-    "lang_expertMode_helptext": "Allows you to set openingtimes for every day.",
     "lang_general": "General",
     "lang_language": "Language",
     "lang_languageTooltip": "The language the frontend uses.",
-    "lang_locationID": "ID",
-    "lang_locationInUse": "Clients",
     "lang_locationIsHidden": "Hidden",
-    "lang_locationIsHidden_helptext": "If checked the API doesn't return information about the room.",
+    "lang_locationIsHidden_title": "If checked the API doesn't return information about the room.",
     "lang_locationName": "Name",
     "lang_locationSettings": "Settings",
     "lang_mainHeader": "Infoscreen",
@@ -41,8 +39,6 @@
     "lang_nameTooltip": "Defines the name of the server.",
     "lang_noServer": "<no server>",
     "lang_openingTime": "Opening times",
-    "lang_refresh": "Refresh",
-    "lang_refresh_helptext": "Checks if the server connection is valid.",
     "lang_room": "Room",
     "lang_roomId": "Room ID",
     "lang_roomIdTooltip": "The ID of the room the server needs, for querying the calendar data.",
@@ -61,7 +57,6 @@
     "lang_serverTable": "Server List",
     "lang_serverTooltip": "Defines from which server the room queries the calendar data.",
     "lang_serverType": "Type",
-    "lang_serverUrl": "URL",
     "lang_shortFriday": "Fri",
     "lang_shortMonday": "Mon",
     "lang_shortSaturday": "Sat",
@@ -74,7 +69,6 @@
     "lang_switchTimeTooltip": "[1-120] Sets the time between switching (in seconds)",
     "lang_typeTooltip": "Defines on which type of server you want to connect to.",
     "lang_updateRates": "Update rates",
-    "lang_urlTooltip": "Server URL on which the backend trys to get the calendar data from.",
     "lang_vertical": "Vertical mode",
     "lang_verticalTooltip": "Defines whether the room and calendar are shown above each other."
 }
