[baseconfig] Display inherited value and source when editing module specific settings
This optionally requires a callback to find the inheritance source in
the module in question. The locations module was updated accordingly.
This implements #3120

--- a/modules-available/baseconfig/lang/de/template-tags.json
+++ b/modules-available/baseconfig/lang/de/template-tags.json
@@ -1,7 +1,9 @@
 {
     "lang_basicConfiguration": "Basiskonfiguration",
     "lang_clientRelatedConfig": "Die Optionen auf dieser Seite beziehen sich auf das Verhalten der bwLehrpool-Clients.",
+    "lang_defaultValue": "Standard",
     "lang_editOverrideNotice": "Sie bearbeiten die Einstellungen f\u00fcr einen Unterbereich",
     "lang_enableOverride": "\u00dcberschreiben",
-    "lang_settingActive": "Einstellung aktiv"
+    "lang_inheritSource": "Geerbt von",
+    "lang_settingActive": "Einstellung aktivieren"
 }
