--- a/modules-available/exams/lang/de/template-tags.json
+++ b/modules-available/exams/lang/de/template-tags.json
@@ -20,7 +20,7 @@
     "lang_end_time": "Uhrzeit",
     "lang_examModeDescription": "Hier k\u00f6nnen Sie bwLehrpool-R\u00e4ume zeitgesteuert in den Pr\u00fcfungsmodus versetzen. Im Pr\u00fcfungsmodus ist das Client-System st\u00e4rker abgeriegelt, sodass es sich zum Schreiben von E-Pr\u00fcfungen eignet. Nach dem Ein- bzw. Ausschalten des Pr\u00fcfungsmodus ist es notwendig, die Rechner in den betroffenen R\u00e4umen neuzustarten.",
     "lang_global": "Global",
-    "lang_headingAllExamLectures": "Liste ausstehender Pr\u00fcfungsveranstaltungen",
+    "lang_headingAllExamLectures": "Ausstehende Pr\u00fcfungsveranstaltungen (30 Tage)",
     "lang_headingGraphicalOverview": "Grafische Darstellung",
     "lang_headingMain": "bwLehrpool Pr\u00fcfungsmodus",
     "lang_id": "ID",
