[dozmod] Add missing translations

--- a/modules-available/dozmod/lang/de/messages.json
+++ b/modules-available/dozmod/lang/de/messages.json
@@ -2,8 +2,9 @@
     "all-templates-reset": "Alle Templates wurden zur\u00fcckgesetzt",
     "delete-images": "L\u00f6schung: {{0}}",
     "dozmod-error": "Fehler bei der Kommunikation mit dem bwLehrpool-Suite server: {{0}}",
-    "images-pending-delete-exist": "Zur L\u00f6schung markierte Abbilder: {{0}}",
+    "images-pending-delete-exist": "Zur L\u00f6schung markierte VM-Versionen: {{0}}",
     "mail-config-saved": "Mail-Konfiguration gespeichert",
+    "no-expired-images": "Keine Abgelaufenen VM-Versionen",
     "nothing-submitted": "Es wurde nichts \u00fcbermittelt",
     "runtimelimits-config-saved": "Einstellungen gespeichert",
     "templates-saved": "Templates wurden gespeichert",
