--- a/modules-available/dozmod/lang/en/messages.json
+++ b/modules-available/dozmod/lang/en/messages.json
@@ -2,8 +2,9 @@
     "all-templates-reset": "All templates have been reset",
     "delete-images": "Delete: {{0}}",
     "dozmod-error": "Error communicating with the bwLehrpool-Suite server: {{0}}",
-    "images-pending-delete-exist": "Images marked for deletion: {{0}}",
+    "images-pending-delete-exist": "VMs marked for deletion: {{0}}",
     "mail-config-saved": "Mail config saved",
+    "no-expired-images": "No expired VMs",
     "nothing-submitted": "There was nothing submitted",
     "runtimelimits-config-saved": "Configuration saved successfully",
     "templates-saved": "Templates saved successfully",
