--- a/modules-available/dozmod/lang/en/module.json
+++ b/modules-available/dozmod/lang/en/module.json
@@ -2,6 +2,7 @@
     "module_name": "bwLehrpool-Suite",
     "page_title": "Manage the bwLehrpool-Suite",
     "submenu_actionlog": "action log",
+    "submenu_expiredimages": "Expired VM versions",
     "submenu_mailconfig": "email configuration",
     "submenu_runtime": "limits and defaults",
     "submenu_templates": "templates",
