Move rebootcontrol, locationinfo to new beta section, statistics_reporting to status
Closes #3122

--- a/modules-available/main/lang/de/categories.json
+++ b/modules-available/main/lang/de/categories.json
@@ -1,4 +1,5 @@
 {
+    "beta": "Beta",
     "content": "Inhalt",
     "settings-client": "Einstellungen (Client)",
     "settings-server": "Einstellungen (Server)",
