--- a/modules-available/main/lang/en/categories.json
+++ b/modules-available/main/lang/en/categories.json
@@ -1,4 +1,5 @@
 {
+    "beta": "Beta",
     "content": "Content",
     "settings-client": "Settings (Client)",
     "settings-server": "Settings (Server)",
