--- a/modules-available/locationinfo/lang/de/template-tags.json
+++ b/modules-available/locationinfo/lang/de/template-tags.json
@@ -1,31 +1,31 @@
 {
     "lang_addServer": "Server",
     "lang_autoScale": "Auto Tage",
-    "lang_autoscaleTooltip": "Berechnet sich die optimale anzahl an Tagen, anhand der Bildschirmbreite, die der Kalender anzeigt.",
+    "lang_autoscaleTooltip": "Berechnet anhand der Bildschirmbreite die optimale Anzahl an Tagen, die der Kalender anzeigt",
     "lang_buildingTable": "Geb\u00e4ude \/ Raum Liste",
     "lang_calendar": "Kalender",
-    "lang_calupdateTooltip": "Zeit nachdem der Kalender geupdated wird (in minuten)",
+    "lang_calupdateTooltip": "Zeit nachdem der Kalender aktualisiert wird (in Minuten)",
     "lang_checkConnection": "Verbindung pr\u00fcfen",
     "lang_closingTime": "Schlie\u00dfungszeit",
     "lang_config": "Einstellungen",
-    "lang_configupdateTooltip": "Zeit nachder die Einstellungen geupdated werden (in minuten)",
+    "lang_configupdateTooltip": "Zeit nach der die Einstellungen aktualisiert werden (in Minuten)",
     "lang_credentials": "Anmeldung",
-    "lang_customUrl": "Benutzerdefinierter URL",
-    "lang_customUrlTooltip": "Dieser URL \u00fcberscheibt die Einstellungen von dem Raum.",
+    "lang_customUrl": "Benutzerdefinierte URL",
+    "lang_customUrlTooltip": "Diese URL \u00fcberschreibt die Einstellungen des Raumes",
     "lang_day": "Tag",
     "lang_daysToShow": "Tage",
-    "lang_daysToShowTooltip": "Legt die gew\u00fcnschte Anzahl an Tagen im Kalender fest.",
-    "lang_deleteConfirmation": "Bist du sicher?",
+    "lang_daysToShowTooltip": "Legt die Anzahl an Tagen im Kalender fest, die angezeigt werden",
+    "lang_deleteConfirmation": "Sind Sie sicher?",
     "lang_display": "Anzeige",
-    "lang_ecoMode": "E-Ink modus",
-    "lang_ecoTooltip": "Anstelle der Farb-basierten PC-Status Bilder, werden Symbol-basierte PC Bilder verwendet.",
+    "lang_ecoMode": "E-Ink Modus",
+    "lang_ecoTooltip": "Anstelle der Farb-basierten PC-Status Bilder, werden Symbol-basierte PC Bilder verwendet",
     "lang_entryName": "Name",
-    "lang_expertMode": "Experten Modus",
+    "lang_expertMode": "Expertenmodus",
     "lang_general": "Allgemein",
     "lang_language": "Sprache",
-    "lang_languageTooltip": "Die Sprache, welche vom Frontend benutzt wird.",
+    "lang_languageTooltip": "Legt die Sprache der angezeigten Oberfl\u00e4che fest",
     "lang_locationIsHidden": "Versteckt",
-    "lang_locationIsHidden_title": "Wenn aktiv, dann liefert die API keine Informationen \u00fcber diesen Raum.",
+    "lang_locationIsHidden_title": "Wenn aktiv, dann liefert die API keine Informationen \u00fcber diesen Raum",
     "lang_locationName": "Name",
     "lang_locationSettings": "Einstellungen",
     "lang_mainHeader": "Infoscreen",
@@ -34,28 +34,28 @@
     "lang_mode2": "Kalender",
     "lang_mode3": "Raum",
     "lang_mode4": "Wechselnd",
-    "lang_modeTooltip": "Die Anzeigemodi, welche das frontend unterst\u00fctzt.",
+    "lang_modeTooltip": "Die Anzeigemodi, welche das Frontend unterst\u00fctzt",
     "lang_monTilFr": "Montag - Freitag",
-    "lang_nameTooltip": "Legt den Namen des Servers fest.",
+    "lang_nameTooltip": "Legt den Namen des Servers fest",
     "lang_noServer": "<Kein Server>",
     "lang_openingTime": "\u00d6ffnungszeiten",
     "lang_room": "Raum",
     "lang_roomId": "Raum ID",
-    "lang_roomIdTooltip": "Die ID vom Raum, welche der Server braucht, um die Kalender Daten abzurufen.",
-    "lang_roomupdateTooltip": "Zeit nachder die Pcs geupdated werden (in sekunden)",
+    "lang_roomIdTooltip": "Die Raum ID, die der Server ben\u00f6tigt, um Kalenderdaten abzurufen",
+    "lang_roomupdateTooltip": "Zeit nach der die PCs aktualisiert werden (in Sekunden)",
     "lang_rotation": "Rotation",
     "lang_rotation0": "0\u00b0",
     "lang_rotation1": "90\u00b0 \u27f2",
     "lang_rotation2": "180\u00b0",
     "lang_rotation3": "90\u00b0 \u27f3",
-    "lang_rotationTooltip": "Rotiert den Raum.",
+    "lang_rotationTooltip": "Rotiert den angezeigten Raum",
     "lang_saturday": "Samstag",
-    "lang_scale": "Kalender breite",
-    "lang_scaleTooltip": "[10-90] Legt die Kalenderbreite fest. (In Prozent)",
-    "lang_sec": "sec",
+    "lang_scale": "Kalenderbreite",
+    "lang_scaleTooltip": "[10-90] Legt die Kalenderbreite fest (in Prozent)",
+    "lang_sec": "sek",
     "lang_server": "Server",
     "lang_serverTable": "Server Liste",
-    "lang_serverTooltip": "Legt fest, von welchem Server die Kalender Daten bezogen werden.",
+    "lang_serverTooltip": "Legt fest, von welchem Server die Kalenderdaten bezogen werden",
     "lang_serverType": "Typ",
     "lang_shortFriday": "Fr",
     "lang_shortMonday": "Mo",
@@ -66,9 +66,9 @@
     "lang_shortWednesday": "Mi",
     "lang_sunday": "Sonntag",
     "lang_switchTime": "Wechselintervall",
-    "lang_switchTimeTooltip": "[1-120] Legt die Zeit fest, die vergeht bis ein wechsel erfolgt (in sekunden)",
-    "lang_typeTooltip": "Legt fest um welchen Typ von Server es sich handelt.",
-    "lang_updateRates": "Anfragraten",
+    "lang_switchTimeTooltip": "[1-120] Legt die Zeit fest, die vergeht bis ein Wechsel erfolgt (in Sekunden)",
+    "lang_typeTooltip": "Legt fest um welchen Server-Typ es sich handelt",
+    "lang_updateRates": "Aktualisierungsintervall",
     "lang_vertical": "Vertikaler Modus",
-    "lang_verticalTooltip": "Legt fest, ob der Kalender und der Raum \u00fcbereinander angezeigt werden soll."
+    "lang_verticalTooltip": "Legt fest, ob Kalender und Raum \u00fcbereinander angezeigt werden sollen"
 }
