--- a/modules-available/rebootcontrol/lang/de/template-tags.json
+++ b/modules-available/rebootcontrol/lang/de/template-tags.json
@@ -1,5 +1,5 @@
 {
-    "lang_authFail": "Athentifizierung fehlgeschlagen",
+    "lang_authFail": "Authentifizierung fehlgeschlagen",
     "lang_client": "Client",
     "lang_connecting": "Verbinde...",
     "lang_error": "Nicht erreichbar",
@@ -14,7 +14,7 @@
     "lang_reboot": "Neustarten",
     "lang_rebootAt": "Neustart um:",
     "lang_rebootButton": "Neustarten",
-    "lang_rebootCheck": "Wollen Sie wirklich die ausgew\u00e4hlten Rechner neustarten?",
+    "lang_rebootCheck": "Wollen Sie die ausgew\u00e4hlten Rechner wirklich neustarten?",
     "lang_rebooting": "Neustart...",
     "lang_selectall": "Alle ausw\u00e4hlen",
     "lang_selected": "Ausgew\u00e4hlt",
@@ -23,7 +23,7 @@
     "lang_shutdown": "Herunterfahren",
     "lang_shutdownAt": "Herunterfahren um: ",
     "lang_shutdownButton": "Herunterfahren",
-    "lang_shutdownCheck": "Wollen Sie wirklich die ausgew\u00e4hlten Rechner herunterfahren?",
+    "lang_shutdownCheck": "Wollen Sie die ausgew\u00e4hlten Rechner wirklich herunterfahren?",
     "lang_shutdownIn": "Herunterfahren in: ",
     "lang_status": "Status",
     "lang_unselectall": "Alle abw\u00e4hlen",
