--- a/modules-available/locationinfo/lang/en/template-tags.json
+++ b/modules-available/locationinfo/lang/en/template-tags.json
@@ -1,7 +1,7 @@
 {
     "lang_addServer": "Server",
     "lang_autoScale": "Auto Days",
-    "lang_autoscaleTooltip": "Calculates the optimum amount of days to show from the display width.",
+    "lang_autoscaleTooltip": "Calculates the optimum amount of days to show from the display width",
     "lang_buildingTable": "Building \/ Room List",
     "lang_calendar": "Calendar",
     "lang_calupdateTooltip": "Time the calender querys for updates (in minutes)",
@@ -11,21 +11,21 @@
     "lang_configupdateTooltip": "Time interval the config gets updated (in minutes)",
     "lang_credentials": "Login",
     "lang_customUrl": "Custom URL",
-    "lang_customUrlTooltip": "This URL will override the config settings from the room.",
+    "lang_customUrlTooltip": "This URL will override the config settings from the room",
     "lang_day": "Day",
     "lang_daysToShow": "Days",
     "lang_daysToShowTooltip": "Defines the amount of days to show in the calendar",
     "lang_deleteConfirmation": "Are you sure?",
     "lang_display": "Display",
     "lang_ecoMode": "E-Ink mode",
-    "lang_ecoTooltip": "Symbolic based pc state pictures are used instead of the colour base ones.",
+    "lang_ecoTooltip": "Symbolic based pc state pictures are used instead of the colour based ones",
     "lang_entryName": "Name",
     "lang_expertMode": "Expert mode",
     "lang_general": "General",
     "lang_language": "Language",
-    "lang_languageTooltip": "The language the frontend uses.",
+    "lang_languageTooltip": "The language the frontend uses",
     "lang_locationIsHidden": "Hidden",
-    "lang_locationIsHidden_title": "If checked the API doesn't return information about the room.",
+    "lang_locationIsHidden_title": "If checked the API doesn't return information about the room",
     "lang_locationName": "Name",
     "lang_locationSettings": "Settings",
     "lang_mainHeader": "Infoscreen",
@@ -34,28 +34,28 @@
     "lang_mode2": "Calendar",
     "lang_mode3": "Room",
     "lang_mode4": "Switching",
-    "lang_modeTooltip": "The display modes the frontend supports.",
+    "lang_modeTooltip": "The display modes the frontend supports",
     "lang_monTilFr": "Monday - Friday",
-    "lang_nameTooltip": "Defines the name of the server.",
+    "lang_nameTooltip": "Defines the name of the server",
     "lang_noServer": "<no server>",
     "lang_openingTime": "Opening times",
     "lang_room": "Room",
     "lang_roomId": "Room ID",
-    "lang_roomIdTooltip": "The ID of the room the server needs, for querying the calendar data.",
+    "lang_roomIdTooltip": "The ID of the room the server needs, for querying the calendar data",
     "lang_roomupdateTooltip": "Time the PCs in the room gets updated (in seconds)",
     "lang_rotation": "Rotation",
     "lang_rotation0": "0\u00b0",
     "lang_rotation1": "90\u00b0 \u27f2",
     "lang_rotation2": "180\u00b0",
     "lang_rotation3": "90\u00b0 \u27f3",
-    "lang_rotationTooltip": "Rotates the room.",
+    "lang_rotationTooltip": "Rotates the room",
     "lang_saturday": "Saturday",
     "lang_scale": "Calendar width",
-    "lang_scaleTooltip": "[10-90] Defines the calendar width. (in percent)",
+    "lang_scaleTooltip": "[10-90] Defines the calendar width (in percent)",
     "lang_sec": "sec",
     "lang_server": "Server",
     "lang_serverTable": "Server List",
-    "lang_serverTooltip": "Defines from which server the room queries the calendar data.",
+    "lang_serverTooltip": "Defines from which server the room queries the calendar data",
     "lang_serverType": "Type",
     "lang_shortFriday": "Fri",
     "lang_shortMonday": "Mon",
@@ -67,8 +67,8 @@
     "lang_sunday": "Sunday",
     "lang_switchTime": "Switchtime",
     "lang_switchTimeTooltip": "[1-120] Sets the time between switching (in seconds)",
-    "lang_typeTooltip": "Defines on which type of server you want to connect to.",
+    "lang_typeTooltip": "Defines on which type of server you want to connect to",
     "lang_updateRates": "Update rates",
     "lang_vertical": "Vertical mode",
-    "lang_verticalTooltip": "Defines whether the room and calendar are shown above each other."
+    "lang_verticalTooltip": "Defines whether the room and calendar are shown above each other"
 }
