[systemstatus] Put logs in tabbed view

--- a/modules-available/systemstatus/lang/en/module.json
+++ b/modules-available/systemstatus/lang/en/module.json
@@ -1,3 +1,8 @@
 {
-    "module_name": "System Status"
+    "module_name": "System Status",
+    "tab_DmsdLog": "bwLehrpool-Suite log",
+    "tab_LdadpLog": "LDAP\/AD",
+    "tab_LighttpdLog": "lighttpd log",
+    "tab_Netstat": "netstat -tulpn",
+    "tab_PsList": "ps auxf"
 }
