--- a/modules-available/locationinfo/lang/de/template-tags.json
+++ b/modules-available/locationinfo/lang/de/template-tags.json
@@ -39,7 +39,7 @@
     "lang_nameTooltip": "Legt den Namen des Servers fest",
     "lang_noServer": "<Kein Server>",
     "lang_openingTime": "\u00d6ffnungszeiten",
-    "lang_pleaseSelect": "Bite w\u00e4hlen...",
+    "lang_pleaseSelect": "Bitte w\u00e4hlen...",
     "lang_room": "Raum",
     "lang_roomId": "Raum ID",
     "lang_roomIdTooltip": "Die Raum ID, die der Server ben\u00f6tigt, um Kalenderdaten abzurufen",
