--- a/modules-available/systemstatus/lang/de/module.json
+++ b/modules-available/systemstatus/lang/de/module.json
@@ -2,7 +2,7 @@
     "module_name": "System-Status",
     "tab_DmsdLog": "bwLehrpool-Suite Server Log",
     "tab_LdadpLog": "LDAP\/AD",
-    "tab_LighttpdLog": "lighttpd log",
+    "tab_LighttpdLog": "lighttpd Log",
     "tab_Netstat": "netstat -tulpn",
     "tab_PsList": "ps auxf"
 }
