--- a/modules-available/news/lang/de/template-tags.json
+++ b/modules-available/news/lang/de/template-tags.json
@@ -9,5 +9,5 @@
     "lang_oldHelp": "Alte Hilfetexte",
     "lang_show": "Ansehen",
     "lang_title": "Titel",
-    "lang_vmChooser_title": "VMChooser-Einstellungen"
+    "lang_vmChooser_title": "vmChooser-Einstellungen"
 }
