--- a/modules-available/news/lang/en/template-tags.json
+++ b/modules-available/news/lang/en/template-tags.json
@@ -9,5 +9,5 @@
     "lang_oldHelp": "Old Help Texts",
     "lang_show": "Show",
     "lang_title": "Title",
-    "lang_vmChooser_title": "VMChooser-Settings"
+    "lang_vmChooser_title": "vmChooser-Settings"
 }
